# $Id$

2008-03-27	Konstantin V. Arkhipov

	* main/Net/Http/HeaderUtils.class.php: redirect() removed, finally.

2008-03-25	Ivan Y. Khvostishkov

	* main/EntityProto/: ProtoBuilders renaming, s/dtoProto/entityProto/
	(merged from trunk).

	* main/Utils/ArrayUtils.class.php: mergeRecursiveUnique(),
	flatToDimensional() helpers (merged from trunk).
	
	* main/ProtoBuilders/, core/Form/: prototyped builders refactoring
	(merged from trunk).

	* core/Form/Primitives/PrimitiveForm.class.php: setComposite() method
	to determine aggregation or composition of objects (merged from trunk).

	* main/ProtoBuilders/FormExporter.class.php,
	main/ProtoBuilders/FormToScopeExporter.class.php: new converters
	(merged from trunk).

	* core/Form/Primitives/BasePrimitive.class.php: dropValue() added
	(merged from trunk).

2008-03-24	Konstantin V. Arkhipov

	* 1.0.3 released.

	* core/Form/Primitives/PrimitiveEnumerationList.class.php,
	core/Form/Primitives/PrimitiveIdentifierList.class.php: custom clean()
	implemented.

	* meta/, main/Base/LightMetaProperty.class.php: integer's limits
	checking restored.

2008-03-17	Ivan Y. Khvostishkov

	* main/Flow/PartViewer.class.php: references to parent and root model
	added, useful for widgets.

	* core/Base/Assert.class.php: added isEmpty(), isIndexExists(),
	isScalar().

	* main/ProtoBuilders/: more builders.

	* main/ProtoBuilders/: partial objects building ability, useful for
	wizards.

2008-03-15	Ivan Y. Khvostishkov

	* main/Utils/RussianTextUtils.class.php: fixed selectCaseForNumber()
	for numbers larger than 100.

2008-03-13	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitivePolymorphicIdentifier.class.php:
	primitive for holding polymorphic values.

2008-03-07	Denis M. Gabaidulin

	* main/UnifiedContainer/UnifiedContainer.class.php: dropList()
	implemented.

2008-03-05	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveDate.class.php: exportValue()
	implemented.

2008-03-04	Konstantin V. Arkhipov
