@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov, Anton E. Lebedevich *
+ *   Copyright (C) 2004-2008 by Konstantin V. Arkhipov, Anton E. Lebedevich *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU Lesser General Public License as         *
@@ -106,6 +106,18 @@
 				
 				case self::EXPRESSION_OR:
 					return $both && ($left || $right);
+				
+				case self::ADD:
+					return $both && ($left + $right);
+				
+				case self::SUBSTRACT:
+					return $both && ($left - $right);
+				
+				case self::MULTIPLY:
+					return $both && ($left * $right);
+				
+				case self::DIVIDE:
+					return $both && $right && ($left / $right);
 				
 				default:
 					throw new UnsupportedMethodException(
