@@ -2,6 +2,9 @@
 
 2008-03-27	Konstantin V. Arkhipov
 
+	* core/Logic/BinaryExpression.class.php: add, substract, multiply and
+	divide logic implemented in toBoolean().
+
 	* main/Net/Http/HeaderUtils.class.php: redirect() removed, finally.
 
 2008-03-25	Ivan Y. Khvostishkov
